# ip4r

./: .gitignore  CMakeLists.txt  build.bat
src/: ip4r.c  ip6r.c  ipr.h  ipr_internal.h  iprange.c
